# galatasaray

./: .dockerignore  404.html  CNAME  Dockerfile  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: galatasaray.yml
docs/: CNAME  index.md
galatasaray/: __main__.py  cli.py  scrapper.py  screen.py
reference/galatasaray/: index.html
reference/galatasaray/cli/: index.html
reference/galatasaray/scrapper/: index.html
reference/galatasaray/screen/: index.html
search/: search_index.json
