[tool.poetry]
name = "galatasaray"
version = "0.1.3"
description = "Everything about the Galatasaray from cli!"
authors = ["Ozcan Yarimdunya <ozcanyd@gmail.com>"]
license = "MIT"
repository = "https://github.com/ozcanyarimdunya/galatasaray"
readme = "README.md"
keywords = ["galatasaray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
include = ["LICENCE", "assets/1.png"]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
rich = "^12.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
galatasaray = "galatasaray.cli:main"

[tool.poetry.plugins]

[tool.poetry.plugins."galatasaray.plugin"]
"galatasaray" = "galatasaray.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
