[tool.poetry]
name = "galatasaray"
version = "0.1.4"
description = "Everything about the Galatasaray from cli!"
authors = ["Ozcan Yarimdunya <ozcanyd@gmail.com>"]
license = "MIT"
repository = "https://github.com/ozcanyarimdunya/galatasaray"
homepage = "https://github.com/ozcanyarimdunya/galatasaray"
readme = "README.md"
keywords = ["galatasaray"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = ["LICENCE", "screenshot.png"]
packages = [
    { include = "galatasaray" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
rich = "^12.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[tool.poetry.scripts]
galatasaray = "galatasaray.cli:main"

[tool.poetry.plugins]

[tool.poetry.plugins."galatasaray.plugin"]
"galatasaray" = "galatasaray.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
